--- a/express/restApi/package.json
+++ b/express/restApi/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
+    "socket.io": "^4.1.3",
     "uuid": "^8.3.2"
   }
 }
